2004-02-24  Zoltan Varga  <vargaz@freemail.hu>

	* mini-sparc.c (mono_sparc_is_virtual_call): New helper function.

	* tramp-sparc.c (create_specific_trampoline): Use g5 register instead
	of l0 since that is callee saved.

	* tramp-sparc.c (sparc_magic_trampoline): Apply unbox trampoline only
	to virtual calls.

	* mini-sparc.c: Ongoing work + flag virtual calls with a special kind 
	of delay instruction.

	* inssel.brg (OP_CHECK_THIS): Set tree->sreg1 and dreg correctly.

	* mini.h (MonoCallInst): Add 'virtual' flag.

	* inssel.brg (mini_emit_virtual_call): Set 'virtual' flag.

2004-02-23  Zoltan Varga  <vargaz@freemail.hu>

	* *.cs: New regression tests.

	* mini-sparc.c inssel-sparc.brg: Update after latest changes. Ongoing sparc 
	work.

	* mini.c (mono_runtime_install_handlers): Fix build.

	* mini.h (MonoJitTlsData): Add 'stack_size', 'signal_stack' and
	'signal_stack_size' members.

	* mini.h mini.c mini-x86.h mini-x86.c: Run sigsegv handlers on an 
	alternate signal stack.

	* exceptions-x86.c: Add stack overflow handling.

	* mini.h mini.c mini-x86.c mini-ppc.c trace.h trace.c: Move tracing 
	functions to arch independent code.

	* mini.c (mono_print_tree): Print more detailed info for load_membase
	opcodes.
	
2004-02-23  Martin Baulig  <martin@ximian.com>

	* mini.c (mini_get_method): Set `gmethod->generic_inst'.

Sun Feb 22 22:25:19 CET 2004 Paolo Molaro <lupus@ximian.com>

	* mini-x86.c: fixed reg allocation for div/rem.

2004-02-22  Miguel de Icaza  <miguel@ximian.com>

	* driver.c (mono_main): Report some configuratio options on --version.

Fri Feb 20 11:01:44 PST 2004 Paolo Molaro <lupus@ximian.com>

	* mini-ppc.c: fixed clt.un, cgt.un. Optimized calls to functions
	low in the address space. Correctly flush memory in thunks where we
	output native code.

2004-02-20  Martin Baulig  <martin@ximian.com>

	* mini.c (mini_get_method): New static method; inflate all generic
	methods and methods in open generic instances.